--- a/public/home.html
+++ b/public/home.html
@@ -143,10 +143,13 @@
         let score = 0;
         let timeLeft = 600; // 10 minutes in seconds
 
-        // Combine all questions from the 3 sections
+        // Combine all questions with their section headings
         const allQuestions = [
+            { heading: "Vehicle Controls" },
             ...sections.vehicleControls,
+            { heading: "Road Rules" },
             ...sections.roadRules,
+            { heading: "Road Signs" },
             ...sections.roadSigns
         ];
 
@@ -156,46 +159,50 @@
             const questionContainer = document.getElementById("question-container");
             questionContainer.innerHTML = ""; // Clear previous content
 
-            const questionElement = document.createElement("div");
-            questionElement.classList.add("question");
+            if (currentQuestion.heading) {
+                const headingElement = document.createElement("h2");
+                headingElement.textContent = currentQuestion.heading;
+                questionContainer.appendChild(headingElement);
+            } else {
+                const questionElement = document.createElement("div");
+                questionElement.classList.add("question");
 
-            const questionText = document.createElement("p");
-            questionText.textContent = currentQuestion.question;
-            questionElement.appendChild(questionText);
+                const questionText = document.createElement("p");
+                questionText.textContent = currentQuestion.question;
+                questionElement.appendChild(questionText);
 
-            // Display image if available
-            if (currentQuestion.image) {
-                const imageElement = document.createElement("img");
-                imageElement.src = currentQuestion.image;
-                imageElement.alt = "Question Image";
-                imageElement.classList.add("question-image");
-                questionElement.appendChild(imageElement);
+                if (currentQuestion.image) {
+                    const imageElement = document.createElement("img");
+                    imageElement.src = currentQuestion.image;
+                    imageElement.alt = "Question Image";
+                    imageElement.classList.add("question-image");
+                    questionElement.appendChild(imageElement);
+                }
+
+                const table = document.createElement("table");
+                const tbody = document.createElement("tbody");
+
+                currentQuestion.options.forEach(option => {
+                    const row = document.createElement("tr");
+                    const cell = document.createElement("td");
+                    const input = document.createElement("input");
+                    input.type = "radio";
+                    input.name = `question${currentQuestionIndex}`;
+                    input.value = option;
+                    input.onclick = () => handleAnswerSelection(option); // Store answer selection
+                    cell.appendChild(input);
+                    const label = document.createElement("label");
+                    label.textContent = option;
+                    cell.appendChild(label);
+                    row.appendChild(cell);
+                    tbody.appendChild(row);
+                });
+
+                table.appendChild(tbody);
+                questionElement.appendChild(table);
+                questionContainer.appendChild(questionElement);
             }
 
-            const table = document.createElement("table");
-            const tbody = document.createElement("tbody");
-
-            currentQuestion.options.forEach(option => {
-                const row = document.createElement("tr");
-                const cell = document.createElement("td");
-                const input = document.createElement("input");
-                input.type = "radio";
-                input.name = `question${currentQuestionIndex}`;
-                input.value = option;
-                input.onclick = () => handleAnswerSelection(option); // Store answer selection
-                cell.appendChild(input);
-                const label = document.createElement("label");
-                label.textContent = option;
-                cell.appendChild(label);
-                row.appendChild(cell);
-                tbody.appendChild(row);
-            });
-
-            table.appendChild(tbody);
-            questionElement.appendChild(table);
-            questionContainer.appendChild(questionElement);
-
-            // Update navigation buttons based on progress
             document.getElementById("back-btn").disabled = currentQuestionIndex === 0;
             document.getElementById("next-btn").style.display = currentQuestionIndex < allQuestions.length - 1 ? "inline-block" : "none";
             document.getElementById("submit-btn").style.display = currentQuestionIndex === allQuestions.length - 1 ? "inline-block" : "none";
@@ -206,14 +213,12 @@
             selectedAnswers[currentQuestionIndex] = answer;
         }
 
-        // Timer
         function startTimer() {
             const timerElement = document.getElementById("time-left");
-
             const interval = setInterval(() => {
                 if (timeLeft <= 0) {
                     clearInterval(interval);
-                    submitQuiz(); // Automatically submit quiz when time is up
+                    submitQuiz();
                 } else {
                     timeLeft--;
                     const minutes = Math.floor(timeLeft / 60);
@@ -223,7 +228,6 @@
             }, 1000);
         }
 
-        // Navigate to the next or previous question
         function navigate(direction) {
             if (direction === 'next' && currentQuestionIndex < allQuestions.length - 1) {
                 currentQuestionIndex++;
@@ -233,7 +237,6 @@
             displayQuestion();
         }
 
-        // Submit the quiz and calculate the score
         function submitQuiz() {
             score = 0;
             selectedAnswers.forEach((answer, index) => {
@@ -243,10 +246,7 @@
                 }
             });
 
-            // Save score to localStorage for access on the results page
             localStorage.setItem("userScore", score);
-
-            // Redirect to the results page
             window.location.href = "results.html";
         }
 
