changed controls image

--- a/public/home.html
+++ b/public/home.html
@@ -122,9 +122,9 @@
     <script>
         const sections = {
             vehicleControls: [
-                { question: "Which control does a vehicle with automatic transmission not have?", options: ["A-1", "B-6", "C-8", "D-11"], answer: "C-8", image: "images/controls.png" },
-                { question: "Which control prevents a parked vehicle from moving?", options: ["A-10", "B-5", "C-7", "D-3"], answer: "C-7", image: "images/controls.png" },
-                { question: "Which controls are used to select a gear?", options: ["A-9&7", "B-6&8", "C-6&1", "D-8&9"], answer: "B-6&8", image: "images/controls.png" }
+                { question: "Which control does a vehicle with automatic transmission not have?", options: ["A-1", "B-6", "C-8", "D-11"], answer: "C-8", image: "images/controls.jpg" },
+                { question: "Which control prevents a parked vehicle from moving?", options: ["A-10", "B-5", "C-7", "D-3"], answer: "C-7", image: "images/controls.jpg" },
+                { question: "Which controls are used to select a gear?", options: ["A-9&7", "B-6&8", "C-6&1", "D-8&9"], answer: "B-6&8", image: "images/controls.jpg" }
             ],
             roadRules: [
                 { question: "Stop lights must be visible in sunlight at:", options: ["A-30 Meters", "B-50 Meters", "C-40 Meters", "D-35 Meters"], answer: "A-30 Meters", image: "images/rules.jpg" },
