--- a/public/home.html
+++ b/public/home.html
@@ -45,7 +45,7 @@
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-        .question-image {
+        .question-image, .section-image {
             width: 300px;
             height: 300px;
             object-fit: contain;
@@ -143,13 +143,13 @@
         let score = 0;
         let timeLeft = 600; // 10 minutes in seconds
 
-        // Combine all questions with their section headings
+        // Combine all questions with their section headings and images
         const allQuestions = [
-            { heading: "Vehicle Controls" },
+            { heading: "Vehicle Controls", sectionImage: "images/controls.png" },
             ...sections.vehicleControls,
-            { heading: "Road Rules" },
+            { heading: "Road Rules", sectionImage: "images/roadrules.png" },
             ...sections.roadRules,
-            { heading: "Road Signs" },
+            { heading: "Road Signs", sectionImage: "images/roadsigns.png" },
             ...sections.roadSigns
         ];
 
@@ -159,10 +159,17 @@
             const questionContainer = document.getElementById("question-container");
             questionContainer.innerHTML = ""; // Clear previous content
 
+            // Display section heading and image if available
             if (currentQuestion.heading) {
                 const headingElement = document.createElement("h2");
                 headingElement.textContent = currentQuestion.heading;
                 questionContainer.appendChild(headingElement);
+
+                const sectionImage = document.createElement("img");
+                sectionImage.src = currentQuestion.sectionImage;
+                sectionImage.alt = `${currentQuestion.heading} Image`;
+                sectionImage.classList.add("section-image");
+                questionContainer.appendChild(sectionImage);
             } else {
                 const questionElement = document.createElement("div");
                 questionElement.classList.add("question");
