--- a/public/home.html
+++ b/public/home.html
@@ -51,6 +51,10 @@
             object-fit: contain;
             margin-bottom: 10px;
         }
+        .question-count {
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
         #nav-buttons button {
             background-color: #4CAF50;
             color: white;
@@ -145,12 +149,12 @@
 
         // Combine all questions with their section headings and images
         const allQuestions = [
-            { heading: "Vehicle Controls", sectionImage: "images/controls.png" },
-            ...sections.vehicleControls,
-            { heading: "Road Rules", sectionImage: "images/roadrules.png" },
-            ...sections.roadRules,
-            { heading: "Road Signs", sectionImage: "images/roadsigns.png" },
-            ...sections.roadSigns
+            { heading: "Vehicle Controls", sectionImage: "images/controls.png", totalQuestions: sections.vehicleControls.length },
+            ...sections.vehicleControls.map((question, index) => ({ ...question, questionNumber: `Question ${index + 1} of 3` })),
+            { heading: "Road Rules", sectionImage: "images/roadrules.png", totalQuestions: sections.roadRules.length },
+            ...sections.roadRules.map((question, index) => ({ ...question, questionNumber: `Question ${index + 1} of 3` })),
+            { heading: "Road Signs", sectionImage: "images/roadsigns.png", totalQuestions: sections.roadSigns.length },
+            ...sections.roadSigns.map((question, index) => ({ ...question, questionNumber: `Question ${index + 1} of 3` }))
         ];
 
         // Function to display the current question
@@ -173,6 +177,14 @@
             } else {
                 const questionElement = document.createElement("div");
                 questionElement.classList.add("question");
+
+                // Display question count
+                if (currentQuestion.questionNumber) {
+                    const questionCount = document.createElement("div");
+                    questionCount.classList.add("question-count");
+                    questionCount.textContent = currentQuestion.questionNumber;
+                    questionContainer.appendChild(questionCount);
+                }
 
                 const questionText = document.createElement("p");
                 questionText.textContent = currentQuestion.question;
